# qaguru_python_advanced_5_intro

./: .env.sample  Dockerfile  README.md  base_session.py  config.py  conftest.py  docker-compose.yaml  fixture_sessions.py  pyproject.toml  reqres_service.py  requirements.txt  test_reqres.py
.github/workflows/: release.yml  test.yml
app/: main.py
app/database/: engine.py  users.py
app/models/: AppStatus.py  User.py
app/routers/: status.py  users.py
data/: test_data.py  user_data.py
models/: AppStatus.py  User.py
reqres_microservice/utils/: path.py
test_reqres_microservice/Models/: Users.py
test_reqres_microservice/data/: user_data.py
test_reqres_microservice/utils/: path.py
tests/: conftest.py  test_pagination.py  test_reqres.py  test_smoke.py  test_users.py
