[project]
name = "qaguru-python-advanced-5-intro"
version = "0.1.0"
description = "Reqres microservice with tests"
authors = [
    {name = "Sergey Dobrovolskiy",email = "21102027+vinterbris@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (==2.32.4)",
    "pytest (==8.4.1)",
    "fastapi (==0.115.14)",
    "fastapi-pagination (==0.13.3)",
    "uvicorn (==0.35.0)",
    "email-validator (==2.2.0)",
    "python-dotenv (==1.1.1)",
    "pydantic (==2.11.7)",
    "psycopg2-binary (==2.9.10)",
    "sqlalchemy (==2.0.43)",
    "sqlmodel (==0.0.24)",
    "faker (==37.5.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"